app/src/components/Tabs/Tabs.scss
@import '../../variables.scss';
@import '../../styles.scss';

.tab-bar {
  @extend %panel;
  @extend %block-text-selection;
  overflow-x: scroll;
  scroll-behavior: smooth;
  scrollbar-width: none;

  &::-webkit-scrollbar {
    display: none !important;
  }

  &__wrapper {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;

    &.-align-left {
      justify-content: flex-start;
    }

    &.-align-center {
      justify-content: center;
    }

    &.-align-right {
      justify-content: flex-end;
    }

    &.-align-space-between {
      justify-content: space-between;
    }

    .tab {
      background: none;
      border: none;
      color: white;
      padding: 12px 10px;
      color: $gray-60;
      font-size: 0.8em;
      text-align: center;
      min-width: 70px;

      &.-highlighted {
        background: $gray-12;
        color: white;
        font-weight: 500;
        border-bottom: 1px solid $brand-color;

        &:hover {
          opacity: 1;
          cursor: default;
        }
      }
    }
  }
}

